--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,7 @@
                         <img src="elemental-gallery-38.jpg" alt="Pool area landscaping">
                         <div class="gallery-caption">
                             <h4>Stone Wall</h4>
-                            <p>Flat ROck, NC</p>
+                            <p>Flat Rock, NC</p>
                        </div>
                     </div>
                         
@@ -1198,7 +1198,7 @@
                         <img src="elemental-gallery-40.jpg" alt="Pool area landscaping">
                         <div class="gallery-caption">
                             <h4>Stone Wall</h4>
-                            <p>Flat ROck, NC</p>
+                            <p>Flat Rock, NC</p>
                        </div>
                     </div>
                         
