--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
                     <div class="gallery-item" onclick="openLightbox(13)">
                         <img src="elemental-gallery-36.jpg" alt="Pool area landscaping">
                         <div class="gallery-caption">
-                            <h4>Patio</h4>
+                            <h4>Travertine Patio</h4>
                             <p>Asheville, NC</p>
                         </div>
                     </div>
