--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,7 @@
                 </div>
                 <div class="service-item">
                     <h3>Steps and Pathways</h3>
-                    <p>      Elevation changes are part of mountain living. We build steps and pathways that flow with the terrain, creating smooth transitions across slopes and between outdoor rooms. Every line is shaped with care for movement, safety, and proportion. What emerges is structure without rigidity and defined routes that feel natural, balanced, and fully integrated into the land.</p>
+                    <p>      Elevation changes are part of mountain living. We build steps and pathways that flow with the terrain and create smooth transitions across slopes and between outdoor rooms. Every line is shaped with care for movement, safety, and proportion. What emerges is structure without rigidity and defined routes that feel natural, balanced and fully integrated into the landscape.</p>
                 </div>
                 <div class="service-item">
                     <h3>Other Services</h3>
