--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@
                 </div>
                 <div class="service-item">
                     <h3>Fire</h3>
-                    <p>   Fire features define outdoor rooms. We craft custom fireplaces and fire pits that create natural gathering places. Whether it's a towering stone chimney or an intimate circle nestled in a patio. Stone hearths, built-in seating, and thoughtful placement turn your space into a destination with purpose and atmosphere. You get an outdoor room with a view to the sky. A place where memories are forged.</p>
+                    <p>   Fire features define outdoor rooms. We craft custom fireplaces and fire pits that create natural gathering places. Whether it's a towering stone chimney or an intimate circle nestled in a patio. Stone hearths, built-in seating, and thoughtful placement turn your space into a destination with purpose and atmosphere. We build outdoor rooms with a view to the sky where memories are forged.</p>
                 </div>
                 <div class="service-item">
                     <h3>Landscape Lighting</h3>
